grammar.js
    source_file: $ => seq(
      optional($.string),
      repeat($.statement),
    ),

    use_statement: $ => seq(
      'use',
      optional(seq($.identifier, '=')),
      choice(
        $.string,
        $.ffi_method,
      ),
      optional($.platform_specifier),
    ),
    ffi_method: $ => seq(
      '@',
      choice($.identifier, $.string),
      field('returns', seq('[', $.type, ']')),
      $.parameters,
      optional('?'),
    ),
    platform_specifier: $ => $.if_block,

    actor_definition: $ => seq(
      'actor',
      optional($.annotation),
      $.identifier,
      optional($.generic_parameters),
      optional(seq('is', $.type)),
      optional($.string),
      repeat($.field),
      repeat(choice(
        $.constructor,
        $.method,
        $.behavior,
      )),
    ),

    class_definition: $ => seq(
      'class',
      optional($.annotation),
      optional($.capability),
      $.identifier,
      optional($.generic_parameters),
      optional(seq('is', $.type)),
      optional($.string),
      repeat($.field),
      repeat(choice(
        $.constructor,
        $.method,
        $.behavior,
      )),
    ),

    primitive_definition: $ => seq(
      'primitive',
      optional($.annotation),
      $.identifier,
      optional($.generic_parameters),
      optional(seq('is', $.type)),
      optional($.string),
      repeat(choice(
        $.constructor,
        $.method,
      )),
    ),

    interface_definition: $ => seq(
      'interface',
      optional($.annotation),
      optional($.capability),
      $.identifier,
      optional($.generic_parameters),
      optional(seq('is', $.type)),
      optional($.string),
      repeat(choice(
        $.constructor,
        $.method,
        $.behavior,
      )),
    ),

    trait_definition: $ => seq(
      'trait',
      optional($.annotation),
      optional($.capability),
      $.identifier,
      optional($.generic_parameters),
      optional(seq('is', $.type)),
      optional($.string),
      repeat(choice(
        $.constructor,
        $.method,
        $.behavior,
      )),
    ),

    field: $ => seq(
      choice('embed', 'let', 'var'),
      field('name', $.identifier),
      ':',
      $.type,
      optional(seq('=', $.expression)),
      optional($.string),
    ),

    constructor: $ => seq(
      'new',
      optional($.annotation),
      optional($.capability),
      $.identifier,
      optional($.generic_parameters),
      $.parameters,
      optional('?'),
      optional(choice(
        seq('=>', $.block),
        $.string,
      )),
    ),

    method: $ => seq(
      'fun',
      optional($.annotation),
      optional($.capability),
      optional('@'),
      $.identifier,
      optional($.generic_parameters),
      $.parameters,
      optional(seq(':', field('returns', $.type))),
      optional('?'),
      optional(choice(
        seq('=>', $.block),
        $.string,
      )),
    ),

    behavior: $ => seq(
      'be',
      optional($.annotation),
      optional($.capability),
      $.identifier,
      optional($.generic_parameters),
      $.parameters,
      optional(choice(
        seq('=>', $.block),
        $.string,
      )),
    ),

    annotation: $ => seq('\\', commaSep1($.identifier), '\\'),

    capability: _ => choice('iso', 'trn', 'ref', 'val', 'box', 'tag'),

    parameters: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => choice(
      seq(
        field('name', $.identifier),
        ':',
        $.type,
        optional(seq('=', $.expression))),
      '...',
    ),

    base_type: $ => prec.right(seq(
      field('name', sep1('.', $.identifier)),
      optional($.type_args),
    )),

    type_args: $ => seq('[', commaSep1($.type), ']'),

    read_type: $ => seq(choice($.base_type, $.lambda_type), '#read'),
    send_type: $ => seq(choice($.base_type, $.lambda_type), '#send'),
    iso_type: $ => seq(choice($.base_type, $.lambda_type), 'iso'),
    ref_type: $ => seq(choice($.base_type, $.lambda_type), 'ref'),
    ephemeral_type: $ => seq($.type, '^'),

    tuple_type: $ => seq('(', commaSep1($.type), ')'),

    intersection_type: $ => prec.right(seq(
      choice(
        seq('(', $.type, repeat1(prec.right(seq('&', $.type))), ')'),
        seq($.type, repeat1(prec.right(seq('&', $.type)))),
      ),
    )),

    lambda_parameters: $ => seq(
      '(',
      commaSep($.type),
      ')',
    ),
    lambda_type: $ => seq(
      optional('@'),
      '{',
      optional($.capability),
      optional($.identifier),
      optional(alias($.generic_parameters, $.type_parameters)),
      $.lambda_parameters,
      optional(seq(':', field('returns', $.type))),
      optional('?'),
      '}',
    ),

    block: $ => prec.left(seq($.expression, repeat(seq(optional(';'), $.expression)))),

    unary_expression: $ => prec.left(PREC.UNARY, seq(
      field('operator', choice('-', 'not', '-~', 'addressof', 'digestof')),
      field('argument', $.expression),
    )),

    // Binary expressions have no operator precedence in Pony
    binary_expression: $ => {
      const operators = [
        '+', '-', '*', '/', '%', '%%', '<<', '>>',
        'and', 'or', 'xor', 'is', 'isnt',
        '==', '!=', '>', '>=', '<=', '<',
        '+~', '-~', '*~', '/~', '%~', '%%~', '<<~', '>>~',
        '==~', '!=~', '>~', '>=~', '<=~', '<~',
        '+?', '-?', '*?', '/?', '%?', '%%?',
      ];

      return choice(...operators.map((operator) => {
        return prec.left(PREC.BINARY, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    generic_expression: $ => seq(
      choice($.identifier, $.ffi_identifier),
      $.type_args,
    ),

    assignment_expression: $ => prec.left(PREC.ASSIGNMENT, seq(
      $.expression,
      '=',
      $.block,
    )),

    variable_declaration: $ => prec.right(seq(
      choice('let', 'var'),
      $.identifier,
      optional(seq(':', $.type)),
    )),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field('callee', $.expression),
      '(',
      commaSep($.expression),
      optional($.named_arguments),
      ')',
      optional('?'),
    )),
    lambda_expression: $ => seq(
      optional('@'),
      '{',
      optional($.capability),
      '(',
      commaSep($.lambda_parameter),
      ')',
      optional($.lambda_captures),
      optional(seq(':', $.type)),
      optional('?'),
      '=>',
      $.block,
      '}',
      optional($.capability),
    ),
    lambda_parameter: $ => prec(PREC.LAMBDA, seq(
      field('name', $.identifier),
      optional(seq(':', $.type)),
      optional(seq('=', $.expression)),
    )),
    lambda_captures: $ => seq(
      '(',
      commaSep(seq(
        $.identifier,
        optional(seq(':', $.type)),
        optional(seq('=', $.expression)),
      )),
      ')',
    ),

    partial_application: $ => prec.right(PREC.MEMBER, seq(
      $.expression,
      '~',
      $.expression,
    )),

    chain_expression: $ => prec.right(PREC.MEMBER, seq(
      $.expression,
      '.>',
      $.expression,
    )),

    member_expression: $ => prec.right(PREC.MEMBER, seq(
      $.expression,
      '.',
      $.expression,
    )),

    parenthesized_expression: $ => prec(PREC.PARENTHESES, seq(
      '(', $.expression, ')',
    )),

    if_block: $ => seq(
      choice('if', 'ifdef'),
      optional($.annotation),
      $.block,
    ),

    else_block: $ => seq(
      'else',
      optional($.annotation),
      $.block,
    ),

    with_elem: $ => seq(
      $.identifier,
      '=',
      $.block,
    ),
    with_statement: $ => seq(
      'with',
      optional($.annotation),
      commaSep1($.with_elem),
      $.do_block,
    ),

    do_block: $ => seq(
      'do',
      $.block,
      optional($.else_block),
      'end',
    ),

    consume_expression: $ => seq('consume', optional($.capability), $.identifier),

    generic_parameter: $ => seq(
      $.identifier,
      optional(seq(':', $.type)),
      optional(seq('=', field('default', $.type))),
    ),

    generic_parameters: $ => seq(
      '[',
      commaSep1($.generic_parameter),
      ']',
    ),

    literal: $ => choice(
      $.array_literal,
      $.object_literal,
      $.number,
      $.float,
      $.string,
      $.character,
      $.boolean,
    ),

    array_literal: $ => seq(
      '[',
      optional(seq('as', $.type, ':')),
      optional($.block),
      ']',
    ),

    object_literal: $ => seq(
      'object',
      optional($.capability),
      optional(seq('is', $.type)),
      repeat($.field),
      repeat(choice($.method, $.behavior)),
      'end',
    ),

    number: _ => {
      const hexadecimal = /0[xX][0-9a-fA-F][0-9a-fA-F_]*/;
      const binary = /0[bB][01][01_]*/;
      const decimal = /[0-9][0-9_]*/;

      return token(choice(
        hexadecimal,
        binary,
        decimal,
      ));
    },

    float: _ => {
      // stupidly this results in ~200 less states
      // vs a prettier alternative
      const decimal = /[0-9][0-9_]*/;
      const dot_decimal = /[0-9][0-9_]*\.[0-9][0-9_]*/;
      const exponent = /[eE][+-]?[0-9]+/;

      return token(choice(
        seq(decimal, exponent),
        seq(dot_decimal, optional(exponent)),
      ));
    },

    string: $ => choice($._string_literal, $._multiline_string_literal),

    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $._escape_sequence,
      )),
      '"',
    ),
    _multiline_string_literal: $ => prec.right(seq(
      '"""',
      repeat(choice(
        alias($._multiline_string_content, $.string_content),
        $._escape_sequence,
      )),
      '"""',
    )),

    character: $ => seq(
      '\'',
      repeat1(
        choice(
          $.character_content,
          $._escape_sequence,
        ),
      ),
      '\'',
    ),
    character_content: _ => token.immediate(prec(2, /[^'\\]+/)),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token_ constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    string_content: _ => token.immediate(prec(1, /[^"\\]+/)),
    _escape_sequence: $ => choice(
      prec(2, token.immediate(seq('\\', /[^abfnrtvxu'\"\\\?]/))),
      prec(1, $.escape_sequence),
    ),

    escape_sequence: _ => token.immediate(seq(
      '\\',
      choice(
        /[^xu0-7]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /u{[0-9a-fA-F]+}/,
        /U[0-9a-fA-F]{8}/,
      ))),

    boolean: _ => choice('true', 'false'),

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_']*/,
    ffi_identifier: $ => seq('@', choice($.identifier, $.string)),

    this: _ => 'this',

    none: _ => 'None',

    comment: _ => token(choice(
      seq('//', /(\\(.|\r?\n)|[^\\\n])*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {ChoiceRule}
 *
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {SeqRule}
 *
 */
function commaSep1(rule) {
  return sep1(',', rule);
}

/**
 * Creates a rule to match on or more occurrences of `rule` separated by `sep`
 *
  @param {string} sep
 * @param {Rule} rule
 *
 * @return {SeqRule}
 *
 */
function sep1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}
