test/corpus/lambda.txt
===========
Lambda Type
===========

primitive Lambda
  fun lambda(callback: {box function_name[T](Argument[T]): ReturnType? } iso): ReturnType? =>
    callback.function_name[U8](Argument[U8])?
---

(source_file
  (primitive_definition
    (identifier)
    (method
      (identifier)
      (parameters
        (parameter
          name: (identifier)
          (iso_type
            (lambda_type
              (capability)
              (identifier)
              (type_parameters
                (generic_parameter (identifier))
              )
              (lambda_parameters
                (base_type
                  name: (identifier)
                  (type_args
                    (base_type name: (identifier))
                  )
                )
              )
              returns: (base_type name: (identifier))
            )
          )
        )
      )
      returns: (base_type name: (identifier))
      (block
        (call_expression
          callee: (member_expression
            (identifier)
            (generic_expression
              (identifier)
              (type_args
                (base_type name: (identifier))
              )
            )
          )
          (generic_expression
            (identifier)
            (type_args
              (base_type name: (identifier))
            )
          )
        )
      )
    )
  )
)

======
Lambda
======

class Lambda
  let lambda: {(String): USize} = {(s) => s.size()}

---

(source_file
  (class_definition
    (identifier)
    (field
      name: (identifier)
      (lambda_type
        (lambda_parameters
          (base_type name: (identifier))
        )
        returns: (base_type name: (identifier))
      )
      (lambda_expression
        (lambda_parameter name: (identifier))
        (block
          (call_expression
            callee: (member_expression
              (identifier)
              (identifier)
            )
          )
        )
      )
    )
  )
)

========
No Args
========

class Lambda
  let throw_fn: {ref ()} = {() => None } ref
---

(source_file
  (class_definition
    (identifier)
    (field
      (identifier)
      (lambda_type
        (capability)
        (lambda_parameters)
      )
      (lambda_expression
        (block (none))
        (capability)
      )
    )
  )
)

===============
Lambda Captures
===============

class Captures
  fun cap() =>
    let f = true
    let l = { ()(f_capture: Bool = f) => not f_capture }

---

(source_file
  (class_definition
    (identifier)
    (method
      (identifier)
      (parameters)
      (block
        (assignment_expression
          (variable_declaration
            (identifier)
          )
          (block
            (literal (boolean))
          )
        )
        (assignment_expression
          (variable_declaration
            (identifier)
          )
          (block
            (lambda_expression
              (lambda_captures 
                (identifier)
                (base_type (identifier))
                (identifier)
              )
              (block
                (unary_expression (identifier))
              )
            )
          )
        )
      )
    )
  )
)

==============
Object Literal
==============

primitive ObjectLiteral
  fun bla() =>
    var obj = object
      fun baz(): Type ? =>
        (Body .> chain()).call()
      be snot[T: Stringable #read](arg: Array[Type] iso^) =>
        arg.size()
    end

---

(source_file
  (primitive_definition
    (identifier)
    (method
      (identifier)
      (parameters)
      (block
        (assignment_expression
          (variable_declaration
            (identifier)
          )
          (block
            (literal
              (object_literal
                (method
                  (identifier)
                  (parameters)
                  (base_type (identifier))
                  (block
                    (call_expression
                      (member_expression
                        (parenthesized_expression
                          (call_expression
                            (chain_expression
                              (identifier)
                              (identifier)
                            )
                          )
                        )
                        (identifier)
                      )
                    )
                  )
                )
                (behavior
                  (identifier)
                  (generic_parameters
                    (generic_parameter
                      (identifier)
                      (read_type
                        (base_type (identifier))
                      )
                    )
                  )
                  (parameters
                    (parameter
                      (identifier)
                      (ephemeral_type
                        (iso_type
                          (base_type
                            (identifier)
                            (type_args
                              (base_type (identifier))
                            )
                          )
                        )
                      )
                    )
                  )
                  (block
                    (call_expression
                      (member_expression
                        (identifier)
                        (identifier)
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

===========
Bare Lambda
===========

use @get_function[@{(U32): U32}](typ: U32)

actor Main
  new create(env: Env) =>
    let identity = @get_function(0)
    let add: @{(U32, U32): U32} = @get_function[@{(U32, U32): U32}](1)
    let result = add(identity(1), identity(2))

---

(source_file
  (use_statement
    (ffi_method
      (identifier)
      returns: (lambda_type
        (lambda_parameters
          (base_type name: (identifier))
        )
        returns: (base_type name: (identifier))
      )
      (parameters
        (parameter
          name: (identifier)
          (base_type name: (identifier))
        )
      )
    )
  )
  (actor_definition
    (identifier)
    (constructor
      (identifier)
      (parameters
        (parameter
          name: (identifier)
          (base_type name: (identifier))
        )
      )
      (block
        (assignment_expression
          (variable_declaration (identifier))
          (block
            (call_expression
              callee: (ffi_identifier (identifier))
              (literal (number))
            )
          )
        )
        (assignment_expression
          (variable_declaration
            (identifier)
            (lambda_type
              (lambda_parameters
                (base_type name: (identifier))
                (base_type name: (identifier))
              )
              returns: (base_type name: (identifier))
            )
          )
          (block
            (call_expression
              callee: (generic_expression
                (ffi_identifier (identifier))
                (type_args
                  (lambda_type
                    (lambda_parameters
                      (base_type name: (identifier))
                      (base_type name: (identifier))
                    )
                    returns: (base_type name: (identifier))
                  )
                )
              )
              (literal (number))
            )
          )
        )
        (assignment_expression
          (variable_declaration (identifier))
          (block
            (call_expression
              callee: (identifier)
              (call_expression
                callee: (identifier)
                (literal (number))
              )
              (call_expression
                callee: (identifier)
                (literal (number))
              )
            )
          )
        )
      )
    )
  )
)
