test/corpus/types.txt
==================
Generic Capability
==================

class Array[A]
  fun iso chop[B: (A & Any #send) = A](split_point: USize): (Array[A] iso^, Array[A] iso^) =>
    None

---

(source_file
  (class_definition
    (identifier)
    (generic_parameters
      (generic_parameter (identifier))
    )
    (method
      (capability)
      (identifier)
      (generic_parameters
        (generic_parameter
          (identifier)
          (intersection_type
            (base_type name: (identifier))
            (send_type (base_type name: (identifier)))
          )
          default: (base_type name: (identifier))
        )
      )
      (parameters
        (parameter
          name: (identifier)
          (base_type name: (identifier))
        )
      )
      returns: (tuple_type
        (ephemeral_type
          (iso_type
            (base_type
              name: (identifier)
              (type_args
                (base_type name: (identifier))
              )
            )
          )
        )
        (ephemeral_type
          (iso_type
            (base_type
              name: (identifier)
              (type_args
                (base_type name: (identifier))
              )
            )
          )
        )
      )
      (block (identifier))
    )
  )
)
